# r2d2_utils_pkg

./: CMakeLists.txt  LICENSE  package.xml
include/r2d2_utils_pkg/: Collections.hpp  ConfigJson.hpp  Debug.hpp  Exceptions.hpp  Json.hpp  Math.hpp  Polynome.hpp  Strings.hpp  Types.hpp
include/r2d2_utils_pkg/Logging/: Color.hpp  Console.hpp  Custom.hpp  Debug.hpp  DebugC.hpp
